Use DAO to remove replacements during indexation